--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -48,11 +48,13 @@ $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
  if ($isPlinged){
       $out = $out. '<img src="/images/system/Silver_Star_Coin-Painted_empty-gold-small.png" ></img>';
       $out = $out. '<span class="heartnumber heartnumberpurple" >'.$cntplings.'</span>';
+      
  }else{            
       $out = $out. '<img src="/images/system/Silver_Star_Coin-Painted_empty-grey-small.png"></img>';
       $out = $out. '<span class="heartnumber" >'.$cntplings.'</span>';
  }
 
+ $out = $out. '<span class="plingtext small"  >Pling</span>';
 
  $out = $out.'</div>';
 echo $out;
