--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1857,6 +1857,11 @@ ul.meta-nav-top
           margin: auto;
           width: 30px;
         }
+        span.plingtext{
+          position:absolute;
+          top:50px; 
+          left:10px;
+        }
 
         span.heartnumberpurple{
            color: #8e44ad; 
