--- a/application/modules/default/views/scripts/product/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/projectplings.phtml
@@ -54,7 +54,7 @@ $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
       $out = $out. '<span class="heartnumber" >'.$cntplings.'</span>';
  }
 
- $out = $out. '<span class="plingtext small"  >Pling</span>';
+ $out = $out. '<span class="plingtext small"  >plings</span>';
 
  $out = $out.'</div>';
 echo $out;
