--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1864,7 +1864,8 @@ ul.meta-nav-top
         }
 
         span.heartnumberpurple{
-           color: #8e44ad; 
+          /* color: #8e44ad; */
+            color: #fff;
         }
       }
     }
