--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -22,6 +22,8 @@
 
 $this->headLink()->appendStylesheet('/theme/flatui/css/stylesheets/general.css');
 
+$architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
+
 $this->tab = 'products';
 ?>
 <link href="/theme/flatui/css/chosen.css" media="screen" rel="stylesheet" type="text/css" />
@@ -715,11 +717,13 @@ $this->inlineScript()->appendScript(
                             /**
                             + '<td>' + '<select id="data-select-tags' + this.id + '" data-license-id="" name="file_tags[]" class="form-control input-sm chosen" multiple="multiple" style="width: 150px;"><option value=""></option>' + tagOptions + '</select></td>'
                             **/
+                            /*   
                             + '<td>'
                             + '<select id="data-select-license' + this.id + '" data-license-id="" name="license" class="form-control input-sm">'
                             + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPLv2 or later</option><option value=\"18\">GPLv2 only</option><option value=\"19\">GPLv3</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                             + '</select><span id="file-tag-license'+this.id+'"><span id="file-tag-license-text'+this.id+'">'
                             + '</td>'
+                            */
                             + '<td>' + this.type + '</td>'
                             + '<td>'
                             + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
@@ -738,6 +742,23 @@ $this->inlineScript()->appendScript(
                             + '<option value=\"4\">Windows executable</option>'
                             + '</select>'
                             + '</td>'
+                    
+                            + '<td>'
+                            + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
+                            + '    <option value=""></option>'
+                                <?php
+                                // force $value to array so we can compare multiple values to multiple
+                                // options; also ensure it's a string for comparison purposes.
+                                $tagList = $architectureListHelper->fetchList();
+                                foreach ($tagList as $opt_value => $opt_label) {
+                                ?>
+                                  + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                <?php
+                                }
+                                ?>
+                            + '</select>'
+                            + '</td>'
+                    
                             + '<td>' + this.created_timestamp + '</td>'
                             + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                             + '<td style="text-align: right">' + numDownloads + '</td>'
@@ -914,11 +935,13 @@ $this->inlineScript()->appendScript(
                         /**
                         + '<td>' + '<select id="data-select-tags' + data.file.id + '" data-tag-id="" name="file_tags[]" class="form-control input-sm chosen" multiple="multiple" style="width: 150px;"><option value=""></option>' + tagOptions + '</select></td>'
                         **/
+                        /*
                         + '<td>'
                         + '<select id="data-select-license' + data.file.id + '" data-license-id="" name="license" class="form-control input-sm">'
                         + '<option value=\"1000\"></option><option value=\"16\">AGPL</option><option value=\"3\">Artistic 2.0</option><option value=\"6\">BSD</option><option value=\"17\">CC0 1.0 Universal (Public Domain)</option><option value=\"9\">CPL 1.0</option><option value=\"10\">Creative Commons by</option><option value=\"13\">Creative Commons by-nc</option><option value=\"15\">Creative Commons by-nc-nd</option><option value=\"14\">Creative Commons by-nc-sa</option><option value=\"12\">Creative Commons by-nd</option><option value=\"11\">Creative Commons by-sa</option><option value=\"8\">GFDL</option><option value=\"1\">GPLv2 or later</option><option value=\"18\">GPLv2 only</option><option value=\"19\">GPLv3</option><option value=\"2\">LGPL</option><option value=\"0\">Other</option><option value=\"7\">Proprietary License</option><option value=\"5\">QPL</option><option value=\"4\">X11</option>'
                         + '</select>'
                         + '</td>'
+                        */
                         + '<td>' + data.file.type + '</td>'
                         + '<td>'
                         + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
@@ -937,6 +960,23 @@ $this->inlineScript()->appendScript(
                         + '<option value=\"4\">Windows executable</option>'
                         + '</select>'
                         + '</td>'
+                        
+                        + '<td>'
+                        + '<select class="form-control input-sm" id="data-select-architecture' + data.file.id + '" data-architecture-id="" name="architecture">'
+                        + '    <option value=""></option>'
+                            <?php
+                            // force $value to array so we can compare multiple values to multiple
+                            // options; also ensure it's a string for comparison purposes.
+                            $tagList = $architectureListHelper->fetchList();
+                            foreach ($tagList as $opt_value => $opt_label) {
+                            ?>
+                              + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                            <?php
+                            }
+                            ?>
+                        + '</select>'
+                        + '</td>'
+                
                         + '<td>' + data.file.created_timestamp + '</td>'
                         + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
                         + '<td style="text-align: right">0</td>'
