add tag architecture

--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -379,9 +379,10 @@ $this->inlineScript()->appendScript(
                             <th><?= $this->translate('Version') ?></th>
                             <th><?= $this->translate('Description') ?></th>
                           
-                            <th><?= $this->translate('License') ?></th>
+                            <!--<th><?= $this->translate('License') ?></th>-->
                             <th><?= $this->translate('Filetype') ?></th>
                             <th><?= $this->translate('Packagetype') ?></th>
+                            <th><?= $this->translate('Architecture') ?></th>
                             <th><?= $this->translate('Date added') ?></th>
                             <th style="text-align: right"><?= $this->translate('Filesize') ?></th>
                             <th style="text-align: right"><?= $this->translate('# of Downloads') ?></th>
