--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -358,6 +358,7 @@ $this->inlineScript()->appendScript(
      data-addpploadfile-uri=""
      data-updatepploadfile-uri=""
      data-updatepackagetype-uri=""
+     data-updatearchitecture-uri=""
      data-deletepploadfile-uri=""
      data-deletepploadfiles-uri="">
     <div class="modal-dialog content-modal" style="width: 95%">
@@ -661,6 +662,7 @@ $this->inlineScript()->appendScript(
                         var licenseId = '';
                         var license = '';
                         var packagetypeId = '';
+                        var architectureId = '';
 
 
                         //var packageId = null;
@@ -677,6 +679,8 @@ $this->inlineScript()->appendScript(
                                         licenseId = tagStr[1];
                                     } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                         packagetypeId = tagStr[1];
+                                    } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                        architectureId = tagStr[1];
                                     }
                                 } else {
                                     var tagStr = this.split('##');
@@ -687,6 +691,8 @@ $this->inlineScript()->appendScript(
                                         license = Base64.decode(license);
                                     } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                         packagetypeId = tagStr[1];
+                                    } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                        architectureId = tagStr[1];
                                     }
                                 }
                             });
@@ -767,18 +773,26 @@ $this->inlineScript()->appendScript(
                             + '</tr>'
                         );
 
-                        $("#data-select-license" + this.id + " option[value='"+licenseId+"']").attr('selected', 'selected');
+                        //$("#data-select-license" + this.id + " option[value='"+licenseId+"']").attr('selected', 'selected');
                         $("#data-select-packagetype" + this.id + " option[value='"+packagetypeId+"']").attr('selected', 'selected');
+                        $("#data-select-architecture" + this.id + " option[value='"+architectureId+"']").attr('selected', 'selected');
                         //UserTags.activateSelect(this.id, this.tags);
 
+                        /*
                         $licenseSelect = $modalPpload.find('#data-select-license' + this.id);
                         if(this.active == '0') {
                             $licenseSelect.prop('disabled', 'disabled');
                         }
+                        */
 
                         $packagetypeSelect = $modalPpload.find('#data-select-packagetype' + this.id);
                         if(this.active == '0') {
                             $packagetypeSelect.prop('disabled', 'disabled');
+                        }
+                        
+                        $architectureSelect = $modalPpload.find('#data-select-architecture' + this.id);
+                        if(this.active == '0') {
+                            $architectureSelect.prop('disabled', 'disabled');
                         }
 
                         if ((typeof link != 'undefined') && (link != "")) {
@@ -1029,6 +1043,33 @@ $this->inlineScript()->appendScript(
                 data: {
                     file_id: fileId,
                     package_type_id: packagetypeId
+                },
+                dataType: 'json',
+                success: function (data, textStatus, jqXHR) {
+                    if (data.status != 'ok') {
+                        return;
+                    }
+
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    alert("Error: " + textStatus + ", " + errorThrown);
+                    return;
+                }
+            });
+        }
+        
+        function updateArchitecture(fileId, architectureId) {
+            var $url = ($modalPpload.attr('data-updatearchitecture-uri')).replace(/@@project_id@@/i, ProductForm.project_id);
+            if (typeof ProductForm.project_id == 'undefined' || ProductForm.project_id == '' || ProductForm.project_id == '0') {
+                $url = ($modalPpload.attr('data-updatearchitecture-uri')).replace(/@@project_id@@/i, <?= (isset($this->project_id))?$this->project_id:0  ?>);
+            }
+
+            $.ajax({
+                url: $url,
+                type: 'POST',
+                data: {
+                    file_id: fileId,
+                    architecture_id: architectureId
                 },
                 dataType: 'json',
                 success: function (data, textStatus, jqXHR) {
@@ -1456,6 +1497,30 @@ $this->inlineScript()->appendScript(
             updatePploadFileTags(fileId, newFileTags);
             $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
             updatePackageType(fileId, packagetypeId);
+        });
+        
+        $modalPpload.on('change', 'select[id*=data-select-architecture]', function(event) {
+            event.preventDefault();
+            var fileId = $(this).closest('tr[data-ppload-file-id]').attr('data-ppload-file-id');
+            var fileTags = $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags');
+            var architectureId = $modalPpload.find('#data-select-architecture' + fileId).val();
+
+            var newFileTags = '';
+            if (fileTags) {
+
+                $.each(fileTags.split(','), function () {
+                    // skip old entries
+                    if ((this.length == 0) || (this.indexOf('architectureid-') == 0) || (this.indexOf('architectureid##') == 0)) {
+                        return true;
+                    }
+                    newFileTags += ',' + this;
+                });
+
+            }
+            newFileTags += ',architectureid-'+architectureId;
+            updatePploadFileTags(fileId, newFileTags);
+            $(this).closest('tr[data-ppload-file-tags]').attr('data-ppload-file-tags',newFileTags);
+            updateArchitecture(fileId, architectureId);
         });
 
         <?php /*
