--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -19,6 +19,7 @@
  *    You should have received a copy of the GNU Affero General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
+$architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
 ?>
 
   <!-- ppload -->
@@ -69,6 +70,7 @@
                                  <th><?= $this->translate('Description'); ?></th>
                             
                                  <th><?= $this->translate('Packagetype'); ?></th>
+                                 <th><?= $this->translate('Architecture'); ?></th>
                              
                                  <th style="text-align: right"><?= $this->translate('Downloads'); ?></th>
                                  <th><?= $this->translate('Date'); ?></th>
@@ -235,10 +237,11 @@
                                     if (this.description) {
                                         fileDescription = this.description;
                                     }
-                                     var licenseId = '';
-                                     var license = '';
-                                     var packagetypeId = '';
-                                     if (this.tags) {
+                                    var licenseId = '';
+                                    var license = '';
+                                    var packagetypeId = '';
+                                    var architectureId = '';
+                                    if (this.tags) {
                                          fileTags = this.tags;
 
                                          $.each(fileTags.split(','), function () {
@@ -251,6 +254,8 @@
                                                   licenseId = tagStr[1];
                                               } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                                   packagetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                                  architectureId = tagStr[1];
                                               }
                                              } else {
                                               var tagStr = this.split('##');
@@ -261,6 +266,8 @@
                                                   license = Base64.decode(license);
                                               } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                                   packagetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                                  architectureId = tagStr[1];
                                               }
                                              }
                                              /*else if (tagStr.length == 2 && tagStr[0] == 'package') {
@@ -348,6 +355,22 @@
                                             + '<option value=\"4\">Windows executable</option>'
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
+                                    
+                                            + '<td>'
+                                            + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
+                                            + '    <option value=""></option>'
+                                                <?php
+                                                // force $value to array so we can compare multiple values to multiple
+                                                // options; also ensure it's a string for comparison purposes.
+                                                $tagList = $architectureListHelper->fetchList();
+                                                foreach ($tagList as $opt_value => $opt_label) {
+                                                ?>
+                                                  + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                                <?php
+                                                }
+                                                ?>
+                                            + '</select><span id="file-tag-architecture'+this.id+'">'
+                                            + '</td>'
 
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + count_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD') + '</td>'
@@ -421,6 +444,18 @@
                                         }
 
                                         $("#data-select-packagetype" + this.id).hide();
+                                        
+                                        
+                                        if ((typeof architectureId != 'undefined') && (architectureId != "")) {
+                                            $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").attr('selected', 'selected');
+                                            $architectureIdText = $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").text();
+                                            $("#data-select-architecture" + this.id).hide();
+                                            $("#file-tag-architecture" + this.id).text($architectureIdText);
+                                        } else {
+                                         $("#data-select-architecture" + this.id).hide();
+                                        }
+
+                                        $("#data-select-architecture" + this.id).hide();
 
                                         if ((typeof this.ocs_compatible != 'undefined') && (this.ocs_compatible != "") && this.ocs_compatible == 1) {
                                             $("#data-checkbox-compatible-" + this.id).attr('checked', 'checked');
@@ -530,6 +565,8 @@
                                                   licenseId = tagStr[1];
                                               } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                                   packagetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                                  architectureId = tagStr[1];
                                               }
                                              } else {
                                               var tagStr = this.split('##');
@@ -540,6 +577,8 @@
                                                   license = Base64.decode(license);
                                               } else if (tagStr.length == 2 && tagStr[0] == 'packagetypeid') {
                                                   packagetypeId = tagStr[1];
+                                              } else if (tagStr.length == 2 && tagStr[0] == 'architectureid') {
+                                                  architectureId = tagStr[1];
                                               }
                                              }
                                              /*else if (tagStr.length == 2 && tagStr[0] == 'package') {
@@ -568,25 +607,41 @@
                                          $pploadCollection.find('table[data-ppload-files] tbody').append(
                                             '<tr' + greyText + '>'
                                             + '<td>' + downloadLink + '</td>'
-                                                + '<td>' + version + '</td>'
+                                            + '<td>' + version + '</td>'
                                             + '<td>' + fileDescription + '</td>'
-                                                + '<td>'
-                                                + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
-                                                + '<option value=\"\"></option>'
-                                                + '<option value=\"2\">Android (APK)</option>'
-                                                + '<option value=\"1\">AppImage</option>'
-                                                + '<option value=\"9\">Arch</option>'
-                                                + '<option value=\"5\">Debian</option>'
-                                                + '<option value=\"8\">Electron-Webapp</option>'
-                                                + '<option value=\"7\">Flatpak</option>'
-                                                + '<option value=\"10\">open/Suse</option>'
-                                                + '<option value=\"3\">OS X compatible</option>'
-                                                + '<option value=\"11\">Redhat</option>'
-                                                + '<option value=\"6\">Snappy</option>'
-                                                + '<option value=\"12\">Source Code</option>'
-                                                + '<option value=\"4\">Windows executable</option>'
-                                                + '</select><span id="file-tag-packagetype'+this.id+'">'
-                                                + '</td>'
+                                            + '<td>'
+                                            + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
+                                            + '<option value=\"\"></option>'
+                                            + '<option value=\"2\">Android (APK)</option>'
+                                            + '<option value=\"1\">AppImage</option>'
+                                            + '<option value=\"9\">Arch</option>'
+                                            + '<option value=\"5\">Debian</option>'
+                                            + '<option value=\"8\">Electron-Webapp</option>'
+                                            + '<option value=\"7\">Flatpak</option>'
+                                            + '<option value=\"10\">open/Suse</option>'
+                                            + '<option value=\"3\">OS X compatible</option>'
+                                            + '<option value=\"11\">Redhat</option>'
+                                            + '<option value=\"6\">Snappy</option>'
+                                            + '<option value=\"12\">Source Code</option>'
+                                            + '<option value=\"4\">Windows executable</option>'
+                                            + '</select><span id="file-tag-packagetype'+this.id+'">'
+                                            + '</td>'
+                                    
+                                            + '<td>'
+                                            + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
+                                            + '    <option value=""></option>'
+                                                <?php
+                                                // force $value to array so we can compare multiple values to multiple
+                                                // options; also ensure it's a string for comparison purposes.
+                                                $tagList = $architectureListHelper->fetchList();
+                                                foreach ($tagList as $opt_value => $opt_label) {
+                                                ?>
+                                                  + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                                <?php
+                                                }
+                                                ?>
+                                            + '</select><span id="file-tag-architecture'+this.id+'">'
+                                            + '</td>'
                                             
                                             + '<td style="text-align: right"><span id="download_counter_' + this.id + '">' + cout_downloads + '</td>'
                                             + '<td>' +mnt.format('YYYY-MM-DD')  + '</td>'
@@ -619,7 +674,7 @@
                                              $("#file-tag-license-text" + this.id).text(license);
                                          }
 
-                                             if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
+                                         if ((typeof packagetypeId != 'undefined') && (packagetypeId != "")) {
                                              $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").attr('selected', 'selected');
                                              $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
                                              $("#data-select-packagetype" + this.id).hide();
@@ -630,6 +685,16 @@
 
                                          $("#data-select-packagetype" + this.id).hide();
 
+                                         if ((typeof architectureId != 'undefined') && (architectureId != "")) {
+                                             $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").attr('selected', 'selected');
+                                             $architectureIdText = $("#data-select-architecture" + this.id + " option[value='" + architectureId + "']").text();
+                                             $("#data-select-architecture" + this.id).hide();
+                                             $("#file-tag-architecture" + this.id).text($architectureIdText);
+                                         } else {
+                                          $("#data-select-architecture" + this.id).hide();
+                                         }
+
+                                         $("#data-select-architecture" + this.id).hide();
 
 
                                          if (isExternLink) {
@@ -673,7 +738,7 @@
 
                                  $pploadCollection.find('table[data-ppload-files] tfoot').append(
                                      '<tr>'
-                                     + '<th colspan="4">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
+                                     + '<th colspan="5">' + myArrayActive.length + ' <?= $this->translate("files")?> (<span style="color: #ccc;" ><a style="cursor:pointer" onclick="fnToggleInactiveFiles();return false;">'+myArrayInactive.length+' archived</a></span>)</th>'
                                      + '<th style="text-align: right">' + downloaded_count_total + '</th>'
                                      + '<th></th>'
                                     + '<th style="text-align: right">' + fileSizeSum.toFixed(2) + ' MB</th>'
