--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -1059,13 +1059,8 @@ $this->inlineScript()->appendScript(
         }
         
         function updateArchitecture(fileId, architectureId) {
-            var $url = ($modalPpload.attr('data-updatearchitecture-uri')).replace(/@@project_id@@/i, ProductForm.project_id);
-            if (typeof ProductForm.project_id == 'undefined' || ProductForm.project_id == '' || ProductForm.project_id == '0') {
-                $url = ($modalPpload.attr('data-updatearchitecture-uri')).replace(/@@project_id@@/i, <?= (isset($this->project_id))?$this->project_id:0  ?>);
-            }
-
             $.ajax({
-                url: $url,
+                url: $modalPpload.attr('data-updatepackagetype-uri'),
                 type: 'POST',
                 data: {
                     file_id: fileId,
