add tag architecture

--- a/application/modules/default/views/scripts/user/products.phtml
+++ b/application/modules/default/views/scripts/user/products.phtml
@@ -1052,7 +1052,7 @@ $this->inlineScript()->appendScript(
 
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
-                    alert("Error: " + textStatus + ", " + errorThrown);
+                    //alert("Error: " + textStatus + ", " + errorThrown);
                     return;
                 }
             });
@@ -1074,7 +1074,7 @@ $this->inlineScript()->appendScript(
 
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
-                    alert("Error: " + textStatus + ", " + errorThrown);
+                    //alert("Error: " + textStatus + ", " + errorThrown);
                     return;
                 }
             });
