--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -299,7 +299,7 @@ $this->inlineScript()->appendScript('
                                                             <!--<th><?= $this->translate('License') ?></th>-->
                                                             <!--<th><?= $this->translate('Filetype') ?></th>-->
                                                             <th><?= $this->translate('Packagetype') ?></th>
-                                                            <!--<th><?= $this->translate('Architecture') ?></th>-->
+                                                            <th><?= $this->translate('Architecture') ?></th>
                                                             <th><?= $this->translate('Date added') ?></th>
 
                                                             <th style="text-align: right"><?= $this->translate('Filesize') ?></th>
@@ -846,7 +846,7 @@ $this->inlineScript()->appendScript('
                                     + '<option value=\"4\">Windows executable</option>'
                                     + '</select>'
                                     + '</td>'
-                                    /*
+                                    
                                     + '<td>'
                                     + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                                     + '    <option value=""></option>'
@@ -862,7 +862,7 @@ $this->inlineScript()->appendScript('
                                         ?>
                                     + '</select>'
                                     + '</td>'
-                                    */
+                                    
                                     + '<td>' + this.created_timestamp + '</td>'
                                     + '<td style="text-align: right">' + humanFileSize(this.size) + '</td>'
                                     + '<td>' + deletePploadFileBtnPerFile + '</td>'
@@ -1068,7 +1068,7 @@ $this->inlineScript()->appendScript('
                                 + '<option value=\"4\">Windows executable</option>'
                                 + '</select>'
                                 + '</td>'
-                                /*
+                                
                                 + '<td>'
                                 + '<select class="form-control input-sm" id="data-select-architecture' + data.file.id + '" data-architecture-id="" name="architecture">'
                                 + '    <option value=""></option>'
@@ -1084,7 +1084,7 @@ $this->inlineScript()->appendScript('
                                     ?>
                                 + '</select>'
                                 + '</td>'
-                                */
+                                
                         
                                 + '<td>' + data.file.created_timestamp + '</td>'
                                 + '<td style="text-align: right">' + humanFileSize(data.file.size) + '</td>'
