--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1818,8 +1818,8 @@ ul.meta-nav-top
         div.projectdtailHeart{
             float: right;           
             z-index: 100;
-            margin-right: 10px;
-            width: 70px;
+            margin-right: 5px;
+            width: 50px;
             .partialbuttonheartdetail{
                 width: 45px;
                 height: 45px;
@@ -1837,14 +1837,14 @@ ul.meta-nav-top
         .heartproject{
           position:relative;
           color:#8e44ad; 
-          font-size: 45px;
+          font-size: 35px;
           float: right;
         }
 
         .heartgrey{
           position:relative;
           color:#C8C8C8; 
-          font-size: 45px;
+          font-size: 35px;
            float: right;
         }
        
@@ -1857,15 +1857,33 @@ ul.meta-nav-top
           margin: auto;
           width: 30px;
         }
+        span.plingcircle{
+            width: 35px;
+            height: 35px;
+            background-color: #fff;
+            border: 3px solid #C8C8C8;
+            border-radius: 50%;
+            display: inline-block;
+            font-size: 20px;
+            text-align: center;
+            color: #C8C8C8;
+            font-weight: bold;
+            transform: rotate(345deg);
+            
+        }
+        span.active{
+            border: 3px solid #EE6E09;
+             color: #EE6E09;
+        }
+
         span.plingtext{
-          position:absolute;
-          top:50px; 
-          left:10px;
+         
         }
 
         span.heartnumberpurple{
           /* color: #8e44ad; */
-            color: #fff;
+          color: #fff;
+
         }
       }
     }
