--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -277,6 +277,21 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                           
                             <div class="product-title-right" >
 
+
+                                <div class="projectdtailHeart">
+                                    <div id="container-pling<?=$this->product->project_id?>" class="container-pling">     
+                                    <?php                                 
+                                        echo $this->partial(
+                                            '/product/partials/projectplings.phtml',
+                                            array(
+                                                "authMember"  => $identity,
+                                                "project_id" => $this->product->project_id
+                                            )
+                                        );                                
+                                    ?>                                
+                                    </div>                                                  
+                                </div>
+
                                 
                                     <div class="projectdtailHeart">
                                         <div id="container-follow<?=$this->product->project_id?>" class="container-pling">     
@@ -293,20 +308,6 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                     </div>
                                  
 
-                                    <div class="projectdtailHeart">
-                                        <div id="container-pling<?=$this->product->project_id?>" class="container-pling">     
-                                        <?php                                 
-                                            echo $this->partial(
-                                                '/product/partials/projectplings.phtml',
-                                                array(
-                                                    "authMember"  => $identity,
-                                                    "project_id" => $this->product->project_id
-                                                )
-                                            );                                
-                                        ?>                                
-                                        </div>  
-                                                      
-                                    </div>
                                     
                                     <div class="projectdetailRating" style="clear: right">
                                     <?php echo $this->render('partials/sidebarRating.phtml'); ?>
@@ -410,7 +411,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                             <li><a href="#ratings-panel" data-toggle="tab">Ratings & Reviews <?php echo '('.count($this->ratings).')';  ?></a></li>
                         <?php } ?>
                          <?php if(count($this->likes)>0){ ?>
-                            <li><a href="#likes-panel" data-toggle="tab">Likes <?php echo '('.count($this->likes).')';  ?></a></li>
+                            <li><a href="#likes-panel" data-toggle="tab">Favs <?php echo '('.count($this->likes).')';  ?></a></li>
                         <?php } ?>
                         <?php if(count($this->projectplings)>0){ ?>
                             <li><a href="#plings-panel" data-toggle="tab">Plings <?php echo '('.count($this->projectplings).')';  ?></a></li>
