--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1732,6 +1732,7 @@ ul.meta-nav-top
         }
         .product-title-right{
             flex:1;
+
         }
         img.logo {
             max-height: 85px;
@@ -1820,6 +1821,7 @@ ul.meta-nav-top
             z-index: 100;
             margin-right: 5px;
             width: 50px;
+            margin-right: 15px;
             .partialbuttonheartdetail{
                 width: 45px;
                 height: 45px;
@@ -1877,7 +1879,7 @@ ul.meta-nav-top
         }
 
         span.plingtext{
-         
+            width: 45px;
         }
 
         span.heartnumberpurple{
