--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -51,7 +51,7 @@ $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
       $out = $out.'<span class="plingcircle ">p</span>';     
  }
 
- $out = $out. '<span class="plingtext small left"  >Plings '.$cntplings.' </span>';
+ $out = $out. '<span class="plingtext small "  >Plings '.$cntplings.' </span>';
  $out = $out.'</div>';
 echo $out;
 ?>
