--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1822,32 +1822,31 @@ ul.meta-nav-top
             margin-right: 5px;
             width: 50px;
             margin-right: 15px;
-            .partialbuttonheartdetail{
-                width: 45px;
-                height: 45px;
-                float: right;
-                text-align: center;
-            }
             .container-pling{
-              position: relative;
-              img{
-                width: 50px;
-                height: 50px;
+              position: relative;              
+              width: 60px;
+              .partialbuttonfollowproject{
+                 text-align: center;
               }
+              .partialbuttonplingproject
+              {
+                text-align: center;
+              }
+
             }
         }
         .heartproject{
           position:relative;
           color:#8e44ad; 
           font-size: 35px;
-          float: right;
+          display: block;
         }
 
         .heartgrey{
           position:relative;
           color:#C8C8C8; 
           font-size: 35px;
-           float: right;
+         
         }
        
 
@@ -1880,6 +1879,7 @@ ul.meta-nav-top
 
         span.plingtext{
             width: 45px;
+
         }
 
         span.heartnumberpurple{
