--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1838,14 +1838,14 @@ ul.meta-nav-top
         .heartproject{
           position:relative;
           color:#8e44ad; 
-          font-size: 35px;
+          font-size: 30px;
           display: block;
         }
 
         .heartgrey{
           position:relative;
           color:#C8C8C8; 
-          font-size: 35px;
+          font-size: 30px;
            display: block;
          
         }
@@ -1860,8 +1860,8 @@ ul.meta-nav-top
           width: 30px;
         }
         span.plingcircle{
-            width: 35px;
-            height: 35px;
+            width: 30px;
+            height: 30px;
             background-color: #fff;
             border: 3px solid #C8C8C8;
             border-radius: 50%;
@@ -1871,7 +1871,7 @@ ul.meta-nav-top
             color: #C8C8C8;
             font-weight: bold;
             transform: rotate(345deg);
-            
+            display: block;
         }
         span.active{
             border: 3px solid #EE6E09;
