--- a/application/modules/default/views/scripts/product/partials/projectplings.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectplings.phtml
@@ -46,9 +46,9 @@ $heartatt = $heartatt. 'role="button" data-fragment=""  '
 	      .' data-auth="'.$member_id.'"';
 $out ='<div role="button" class="partialbuttonplingproject" '.$heartatt.'>';
  if ($isPlinged){     
-      $out = $out.'<span class="plingcircle active"></span>';           
+      $out = $out.'<span class="plingcircle active">p</span>';           
  }else{                  
-      $out = $out.'<span class="plingcircle "></span>';     
+      $out = $out.'<span class="plingcircle ">p</span>';     
  }
 
  $out = $out. '<span class="plingtext small "  >Plings '.$cntplings.' </span>';
