--- a/application/modules/default/views/scripts/product/partials/projectlike.phtml
+++ b/application/modules/default/views/scripts/product/partials/projectlike.phtml
@@ -45,7 +45,7 @@ $out ='<div role="button" class="partialbuttonfollowproject" '.$heartatt.'>';
         $out = $out. '<i class="fa fa-heart-o heartgrey " aria-hidden="true"></i>';      
  }
 
- $out = $out. '<span class="plingtext small "  >Favs '.$cntheart.' </span>';
+ $out = $out. '<span class="plingtext small heartnumber"  > '.$cntheart.' </span>';
  $out = $out.'</div>';
 echo $out;
 ?>
