--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1821,12 +1821,14 @@ ul.meta-nav-top
             z-index: 100;
             margin-right: 5px;
             width: 50px;
-            margin-right: 15px;
+            
             .container-pling{
               position: relative;              
               width: 50px;
               .partialbuttonfollowproject{
                  text-align: center;
+                 width: 45px;
+                 height: 45px;
               }
               .partialbuttonplingproject
               {
@@ -1851,13 +1853,13 @@ ul.meta-nav-top
         }
        
 
-        span.heartnumber{
+        div.heartnumber{
           z-index: 3;
           position: relative;          
-          top: -36px;         
+          top: -32px;         
           display: block;
           margin: auto;
-          width: 30px;
+          color:#fff;
         }
         span.plingcircle{
             width: 30px;
@@ -1883,10 +1885,9 @@ ul.meta-nav-top
 
         }
 
-        span.heartnumberpurple{
-          /* color: #8e44ad; */
-          color: #fff;
-
+        div.heartnumberpurple{
+          color: #8e44ad;
+          
         }
       }
     }
